--- a/public/acticleDetail.html
+++ b/public/acticleDetail.html
@@ -482,95 +482,77 @@
       <section class="section service-content bg-blue-light">
         <div class="container">               
           <div class="service-wrapper">
-            <div class="service-main-wrapper">                       
-              <div class="service-content-description">
+            <div class="service-main-wrapper">
+              <article>
                 <p>
                   Диоксид циркония считается выбором номер один в области зубного протезирования.
                   Коронки из этого материала отличаются удивительной прочностью и эстетическими качествами,
                   что делает их весьма привлекательными. Но как выбрать лучшие циркониевые коронки?
                   Верный выбор коронки будет обеспечивать долгий срок службы и сияющую улыбку.
-                </p>                            
-              </div>
-              <div class="service-content-item">
-                <div class="h4"> 
+                </p>
+                <h4>
                   Что такое диоксид циркония?
-                </div>
-                <div class="service-content-description">
-                  <p>
-                    В стоматологии при изготовлении протезов часто используются металлы благодаря их прочности и стабильности.
-                    Но вместо чистого металла, многие стоматологи рекомендуют использовать цирконий, точнее диоксид циркония,
-                    который обладает еще большей прочностью.
-                  </p>
-                  <p>
-                    Циркониевые коронки становятся все более распространенными в имплантологии, несмотря на их высокую стоимость.
-                    Основные преимущества этого материала для протезов — это его прочность и цвет. В ортопедии диоксид циркония
-                    называют «белым золотом». Его цвет максимально приближен к естественному оттенку зубов, что делает искусственные
-                    коронки практически незаметными. Если установка осуществляется согласно всем стандартам, то такая конструкция может служить довольно долго.
-                  </p>
-                  <p>
-                    Циркониевые коронки имеют идеальный внешний вид, что делает их наиболее подходящими для восстановления передних зубов.
-                    Этот материал имеет определенную степень прозрачности, что позволяет ему легко адаптироваться к естественному оттенку эмали,
-                    и тем самым не выделяться среди остальных зубов.
-                  </p>
-                </div>     
-              </div>    
-              <div class="service-content-item">
-                <div class="h4"> 
+                </h4>
+                <p>
+                  В стоматологии при изготовлении протезов часто используются металлы благодаря их прочности и стабильности.
+                  Но вместо чистого металла, многие стоматологи рекомендуют использовать цирконий, точнее диоксид циркония,
+                  который обладает еще большей прочностью.
+                </p>
+                <p>
+                  Циркониевые коронки становятся все более распространенными в имплантологии, несмотря на их высокую стоимость.
+                  Основные преимущества этого материала для протезов — это его прочность и цвет. В ортопедии диоксид циркония
+                  называют «белым золотом». Его цвет максимально приближен к естественному оттенку зубов, что делает искусственные
+                  коронки практически незаметными. Если установка осуществляется согласно всем стандартам, то такая конструкция может служить довольно долго.
+                </p>
+                <p>
+                  Циркониевые коронки имеют идеальный внешний вид, что делает их наиболее подходящими для восстановления передних зубов.
+                  Этот материал имеет определенную степень прозрачности, что позволяет ему легко адаптироваться к естественному оттенку эмали,
+                  и тем самым не выделяться среди остальных зубов.
+                </p>
+                <h4>
                   Как производят и устанавливают циркониевые коронки?
-                </div>
-                <div class="service-content-description">
-                  <p>
-                    Первый этап протезирования — это санация полости рта, которая включает в себя лечение воспалительных и кариозных процессов.
-                    Затем производится обработка зуба.
-                  </p>
-                  <p>
-                    Далее идет процесс сканирования зубов и создание 3D-изображения искусственных коронок. Специализированные программы создают эскиз,
-                    который затем передается специалистам для изготовления каркаса коронки.
-                  </p>
-                  <p>
-                    После этого коронка обжигается в печи и покрывается фарфором или другим материалом. Затем коронка окрашивается в нужный оттенок
-                    и снова подвергается обжигу.
-                  </p>
-                  <p>
-                    Современная технология CAD/CAM является универсальным решением, соответствующим всем требованиям по изготовлению коронок для протезирования зубов.
-                  </p>
-                </div>     
-              </div>                     
-              <div class="service-content-item plus">
-                <div class="h4"> 
+                </h4>
+                <p>
+                  Первый этап протезирования — это санация полости рта, которая включает в себя лечение воспалительных и кариозных процессов.
+                  Затем производится обработка зуба.
+                </p>
+                <p>
+                  Далее идет процесс сканирования зубов и создание 3D-изображения искусственных коронок. Специализированные программы создают эскиз,
+                  который затем передается специалистам для изготовления каркаса коронки.
+                </p>
+                <p>
+                  После этого коронка обжигается в печи и покрывается фарфором или другим материалом. Затем коронка окрашивается в нужный оттенок
+                  и снова подвергается обжигу.
+                </p>
+                <p>
+                  Современная технология CAD/CAM является универсальным решением, соответствующим всем требованиям по изготовлению коронок для протезирования зубов.
+                </p>
+                <h4>
                   Категории протезов из циркониевого диоксида
-                </div>
-                <div class="service-content-description">
-                  <p>
-                    Производители предлагают две основные категории протезов, учитывая специфику установки коронок:
-                  </p>                               
-                </div>   
-                <ul>
-                  <li>                                   
-                    <p>
-                      комбинированные (традиционные). Эта структура включает два элемента:<br>
-                      внутренний, который выступает в роли каркаса,
-                      и внешний. При их создании используется фарфоровое покрытие;
-                    </p>   
+                </h4>
+                <p>
+                  Производители предлагают две основные категории протезов, учитывая специфику установки коронок:
+                </p>
+                <ul class="plus">
+                  <li>                 
+                    комбинированные (традиционные). Эта структура включает два элемента:<br>
+                    внутренний, который выступает в роли каркаса,
+                    и внешний. При их создании используется фарфоровое покрытие;                    
                   </li>
-                  <li>                                    
-                    <p>
-                      цельные. Они подходят для установки в задних частях рта.<br>
-                      Керамическое покрытие не применяется.
-                    </p>
-                  </li>                                
+                  <li>                     
+                    цельные. Они подходят для установки в задних частях рта.<br>
+                    Керамическое покрытие не применяется.                      
+                  </li>
                 </ul>
-                <div class="service-content-description post">
-                  <p>
-                    Специалист стоматологии определит подходящий тип в соответствии с индивидуальными показаниями пациента.
-                  </p>                               
-                </div>   
-              </div>
+                <p>
+                  Специалист стоматологии определит подходящий тип в соответствии с индивидуальными показаниями пациента.
+                </p>
+              </article>
             </div>                                         
             <div class="service-acide-wrapper">
-              <div class="price-acide acide">
+              <div class="acide">
                 <div class="feedback-wrapper">
-                  <div class="feedback-title h3">
+                  <div class="feedback-title">
                     запись на прием
                   </div>
                   <form class="feedback-form" id="acide-appointment">
@@ -594,95 +576,63 @@
         <div class="container">                    
           <div class="swiper articles-slider slider-four blue">
             <div class="slider-arrows">
-              <div class="slider-prev">
+              <a href="#" class="slider-prev">
                 <svg width="53" height="14" viewBox="0 0 53 14" fill="none">
                   <path d="M52 7H1" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M7 13L1 7L7 1" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>                            
                 <span>Предыдущая статья</span>
-              </div>
-              <div class="slider-next">
+              </a>
+              <a href="#" class="slider-next">
                 <span>Следующая статья</span>
                 <svg width="53" height="14" viewBox="0 0 53 14" fill="none">
                   <path d="M1 7H52" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M46 13L52 7L46 1" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>                            
+              </a>
+            </div>
+            <div class="row">
+              <div class="col-lg-6 col-md-12">
+                <a href="javascript:void(0)" class="article">
+                  <div class="article-image">
+                    <img src="./images/article-image.jpg" alt="article">
+                  </div>
+                  <div class="article-content">
+                    <div class="article-title">
+                      Популярные коронки из диоксида циркония. Чем они так хороши?
+                    </div>
+                    <div class="article-author">
+                      <div class="article-author-speciality">
+                        Стоматолог-ортопед
+                      </div>
+                      <div class="article-author-name">
+                        Трепышко Игорь Викторович
+                      </div>
+                    </div>
+                  </div>
+                </a>
               </div>
-            </div>                               
-            <div class="swiper-wrapper">                  
-              <a href="javascript:void(0)" class="swiper-slide article">
-                <div class="article-image">
-                  <img src="./images/article-image.jpg" alt="article">
-                </div>
-                <div class="article-content">
-                  <div class="article-title">
-                    Популярные коронки из диоксида циркония. Чем они так хороши?
+              <div class="col-lg-6 col-md-12">
+                <a href="javascript:void(0)" class="article">
+                  <div class="article-image">
+                    <img src="./images/article-image.jpg" alt="article">
                   </div>
-                  <div class="article-author">
-                    <div class="article-author-speciality">
-                      Стоматолог-ортопед
+                  <div class="article-content">
+                    <div class="article-title">
+                      Популярные коронки из диоксида циркония. Чем они так хороши?
                     </div>
-                    <div class="article-author-name">
-                      Трепышко Игорь Викторович
-                    </div>
-                  </div>
-                </div>
-              </a>
-              <a href="javascript:void(0)" class="swiper-slide article">
-                <div class="article-image">
-                  <img src="./images/article-image.jpg" alt="article">
-                </div>
-                <div class="article-content">
-                  <div class="article-title">
-                    Популярные коронки из диоксида циркония. Чем они так хороши?
-                  </div>
-                  <div class="article-author">
-                    <div class="article-author-speciality">
-                      Стоматолог-ортопед
-                    </div>
-                    <div class="article-author-name">
-                      Трепышко Игорь Викторович
+                    <div class="article-author">
+                      <div class="article-author-speciality">
+                        Стоматолог-ортопед
+                      </div>
+                      <div class="article-author-name">
+                        Трепышко Игорь Викторович
+                      </div>
                     </div>
                   </div>
-                </div>
-              </a>
-              <a href="javascript:void(0)" class="swiper-slide article">
-                <div class="article-image">
-                  <img src="./images/article-image.jpg" alt="article">
-                </div>
-                <div class="article-content">
-                  <div class="article-title">
-                    Популярные коронки из диоксида циркония. Чем они так хороши?
-                  </div>
-                  <div class="article-author">
-                    <div class="article-author-speciality">
-                      Стоматолог-ортопед
-                    </div>
-                    <div class="article-author-name">
-                      Трепышко Игорь Викторович
-                    </div>
-                  </div>
-                </div>
-              </a>
-              <a href="javascript:void(0)" class="swiper-slide article">
-                <div class="article-image">
-                  <img src="./images/article-image.jpg" alt="article">
-                </div>
-                <div class="article-content">
-                  <div class="article-title">
-                    Популярные коронки из диоксида циркония. Чем они так хороши?
-                  </div>
-                  <div class="article-author">
-                    <div class="article-author-speciality">
-                      Стоматолог-ортопед
-                    </div>
-                    <div class="article-author-name">
-                      Трепышко Игорь Викторович
-                    </div>
-                  </div>
-                </div>
-              </a>                
-            </div>                    
+                </a>
+              </div>
+            </div>
           </div>
           <div class="ui-centered">
             <a href="#" class="ui-btn ui-btn-green">
