--- a/src/doctor.html
+++ b/src/doctor.html
@@ -445,7 +445,7 @@
     <!-- main screen start -->
     <main class="main">
         
-      <section class="doctor-banner">
+      <section class="section-prepage doctor-banner">
         <div class="doctor-banner-bg">
           <img src="./images/doctor-bg.jpg" alt="bg" loading="lazy">
         </div>
@@ -453,23 +453,25 @@
           <img src="images/doctor-1-photo.jpg" alt="doctor" loading="lazy">
         </div>
         <div class="container">
-          <div class="doctor-banner-name">
-            Николаеня Александр Николаевич
-          </div>
-          <div class="doctor-banner-speciality">            
-            Стоматолог-ортопед            
-          </div>
-          <div class="doctor-banner-experience">
-            <p>
-              <b>Стаж работы:</b> 12 лет
-            </p>
-            <p>
-              <b>Категория:</b> Высшая
-            </p> 
-          </div>
-          <a href="javascript:void(0)" class="ui-btn mfp-link" data-href="./popups/popup-appointment.html">
-            Записаться
-          </a>
+          <div class="doctor-banner-content">
+            <div class="doctor-banner-name">
+              Николаеня Александр Николаевич
+            </div>
+            <div class="doctor-banner-speciality">            
+              Стоматолог-ортопед            
+            </div>
+            <div class="doctor-banner-experience">
+              <p>
+                <b>Стаж работы:</b> 12 лет
+              </p>
+              <p>
+                <b>Категория:</b> Высшая
+              </p> 
+            </div>
+            <a href="javascript:void(0)" class="ui-btn mfp-link" data-href="./popups/popup-appointment.html">
+              Записаться
+            </a>
+          </div>          
         </div>
       </section>
 
@@ -542,6 +544,14 @@
                 </div>
                 <div class="education-card-info">
                   БелМАПО — программа «Подготовка стоматологического пациента к ортопедическому лечению»  
+                </div>
+              </div>
+              <div class="education-card-item">
+                <div class="education-card-year">
+                  2013
+                </div>
+                <div class="education-card-info">
+                  БелМАПО — программа «Нормализация окклюзии в клинике ортопедической стоматологии»  
                 </div>
               </div>
               <div class="education-card-item">
