--- a/public/acticleDetail.html
+++ b/public/acticleDetail.html
@@ -533,7 +533,7 @@
                 <p>
                   Производители предлагают две основные категории протезов, учитывая специфику установки коронок:
                 </p>
-                <ul class="plus">
+                <ul class="ui-list ui-list-plus">
                   <li>                 
                     комбинированные (традиционные). Эта структура включает два элемента:<br>
                     внутренний, который выступает в роли каркаса,
