--- a/public/doctor.html
+++ b/public/doctor.html
@@ -475,9 +475,8 @@
         </div>
       </section>
 
-      <section class="section education bg-blue-light">
+      <section class="section section-education bg-blue-light">
         <div class="container">
-
           <div class="education-card">
             <div class="education-card-head">
               <svg width="68" height="68" viewBox="0 0 68 68" fill="none" class="education-card-icon">
@@ -591,65 +590,65 @@
         </div>
       </section>
 
-      <section class="section diploms bg-blue">
-          <div class="container">
-              <div class="diploms-title">
-                  Сертификаты и награды
-              </div>
-              <div class="swiper diploms-slider slider-four blue">
-                  <div class="swiper-wrapper">
-                    <div class="swiper-slide diploms-slide">
-                      <div class="diploms-slide-item">
-                        <img src="./images/diplom-1.jpg" alt="diplom">
-                      </div>                      
-                    </div>
-                    <div class="swiper-slide diploms-slide">
-                      <div class="diploms-slide-item">
-                        <img src="./images/diplom-2.jpg" alt="photo">
-                      </div>                      
-                    </div>
-                    <div class="swiper-slide diploms-slide">
-                      <div class="diploms-slide-item">
-                        <img src="./images/diplom-1.jpg" alt="diplom">
-                      </div> 
-                    </div>
-                    <div class="swiper-slide diploms-slide">
-                      <div class="diploms-slide-item">
-                        <img src="./images/diplom-1.jpg" alt="diplom">
-                      </div> 
-                    </div>
-                    <div class="swiper-slide diploms-slide">
-                      <div class="diploms-slide-item">
-                        <img src="./images/diplom-1.jpg" alt="diplom">
-                      </div> 
-                    </div>
-                    <div class="swiper-slide diploms-slide">
-                      <div class="diploms-slide-item">
-                        <img src="./images/diplom-1.jpg" alt="diplom">
-                      </div> 
-                    </div>
-                    <div class="swiper-slide diploms-slide">
-                      <div class="diploms-slide-item">
-                        <img src="./images/diplom-1.jpg" alt="diplom">
-                      </div> 
-                    </div>
-                  </div>
-                  <div class="slider-arrows">
-                    <div class="slider-prev">           
-                      <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
-                        <path d="M55 12H4" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M10 18L4 12L10 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>              
-                    </div>
-                    <div class="slider-next">
-                      <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
-                        <path d="M1 12H52" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                        <path d="M46 18L52 12L46 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                      </svg>               
-                    </div>          
-                  </div> 
-                </div> 
+      <section class="section section-diploms bg-blue">
+        <div class="container">
+          <div class="diploms-title">
+            Сертификаты и награды
           </div>
+          <div class="swiper diploms-slider slider-four blue">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide diploms-slide">
+                <div class="diploms-slide-item">
+                  <img src="./images/diplom-1.jpg" alt="diplom">
+                </div>                      
+              </div>
+              <div class="swiper-slide diploms-slide">
+                <div class="diploms-slide-item">
+                  <img src="./images/diplom-2.jpg" alt="photo">
+                </div>                      
+              </div>
+              <div class="swiper-slide diploms-slide">
+                <div class="diploms-slide-item">
+                  <img src="./images/diplom-1.jpg" alt="diplom">
+                </div> 
+              </div>
+              <div class="swiper-slide diploms-slide">
+                <div class="diploms-slide-item">
+                  <img src="./images/diplom-1.jpg" alt="diplom">
+                </div> 
+              </div>
+              <div class="swiper-slide diploms-slide">
+                <div class="diploms-slide-item">
+                  <img src="./images/diplom-1.jpg" alt="diplom">
+                </div> 
+              </div>
+              <div class="swiper-slide diploms-slide">
+                <div class="diploms-slide-item">
+                  <img src="./images/diplom-1.jpg" alt="diplom">
+                </div> 
+              </div>
+              <div class="swiper-slide diploms-slide">
+                <div class="diploms-slide-item">
+                  <img src="./images/diplom-1.jpg" alt="diplom">
+                </div>
+              </div>
+            </div>
+            <div class="slider-arrows">
+              <div class="slider-prev">
+                <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
+                  <path d="M55 12H4" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M10 18L4 12L10 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </div>
+              <div class="slider-next">
+                <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
+                  <path d="M1 12H52" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  <path d="M46 18L52 12L46 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+              </div>
+            </div> 
+          </div> 
+        </div>
       </section>
 
       <section class="feedback">
@@ -674,7 +673,7 @@
       </section>     
 
       <!-- отзывы -->
-      <section class="section reviews bg-blue">
+      <section class="section section-reviews bg-blue">
         <div class="container">
           <div class="section-title">           
             Отзывы                    
