--- a/public/examples.html
+++ b/public/examples.html
@@ -444,7 +444,7 @@
     <!-- main screen start -->
     <main class="main">
      
-      <section class="section section-examples bg-blue-light">            
+      <section class="section section-all-examples bg-blue-light">            
         <div class="container">
           <div class="section-title">
             Наши работы
@@ -774,7 +774,7 @@
       </section>     
 
       <!-- отзывы -->
-      <section class="section reviews bg-blue">
+      <section class="section section-reviews bg-blue">
         <div class="container">
           <div class="section-title">           
             Отзывы                    
