--- a/public/index.html
+++ b/public/index.html
@@ -642,7 +642,7 @@
         </div>        
       </div>
 
-      <section class="section actions bg-blue-light">
+      <section class="section section-actions bg-blue-light">
         <div class="container">
           <div class="section-title">
             Акции
@@ -707,7 +707,7 @@
         </div>
       </section>
 
-      <section class="services bg-blue-light">
+      <section class="section-services bg-blue-light">
         <div class="container">
           <div class="section-title">
             Основные услуги
@@ -838,7 +838,7 @@
         </div>
       </section>
 
-      <section class="section popular bg-blue">
+      <section class="section section-popular bg-blue">
         <div class="container">
           <div class="section-title">
             Популярные услуги
@@ -993,7 +993,7 @@
       </section>
 
       <!-- наши врачи -->
-      <section class="section bg-blue-light">
+      <section class="section section-all-doctors bg-blue-light">
         <div class="container">
           <div class="section-title">
             Наши врачи
@@ -1343,17 +1343,17 @@
               </div>
             </div>
             <div class="slider-arrows">
-              <div class="slider-prev">           
+              <div class="slider-prev">
                 <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
                   <path d="M55 12H4" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M10 18L4 12L10 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>              
+                </svg>
               </div>
               <div class="slider-next">
                 <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
                   <path d="M1 12H52" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                   <path d="M46 18L52 12L46 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>               
+                </svg>
               </div>          
             </div>   
           </div>
@@ -1370,7 +1370,7 @@
       </section>
 
       <!-- Наши работы -->
-      <section class="section works bg-blue-light">
+      <section class="section section-works bg-blue-light">
         <div class="container">
           <div class="section-title">
             Наши работы
@@ -1433,7 +1433,7 @@
       </section>
 
       <!-- отзывы -->
-      <section class="section reviews bg-blue">
+      <section class="section section-reviews bg-blue">
         <div class="container">
           <div class="section-title">           
             Отзывы                    
@@ -1630,7 +1630,7 @@
         </div>
       </section>
 
-      <div class="section portfolio bg-blue">
+      <div class="section section-portfolio bg-blue">
         <div class="container">
           <div class="portfolio-text">
             Стоматологическая клиника <span>«Дентополис»</span> в Минске — команда профессионалов всех специальностей: терапевтов, ортопедов, хирургов, ортодонтов и имплантологов.
