--- a/public/prices.html
+++ b/public/prices.html
@@ -443,7 +443,7 @@
 
     <!-- main screen start -->
     <main class="main">
-      <section class="section prices bg-blue-light">
+      <section class="section section-prices bg-blue-light">
         <div class="container">
           <div class="h2">
             Цены стоматологических услуг
@@ -893,7 +893,7 @@
         </div>
       </section>
 
-      <section class="section methods bg-blue">
+      <section class="section section-methods bg-blue">
         <div class="container">
           <div class="methods-title section-title">
             способы оплаты
@@ -934,7 +934,7 @@
         </div>
       </section>
 
-      <section class="section installment bg-blue-light">
+      <section class="section section-installment bg-blue-light">
         <div class="container">
           <div class="installment-title">
             «Дентополис» предлагает стоматологические услуги по картам рассрочек
