--- a/public/reviews.html
+++ b/public/reviews.html
@@ -445,61 +445,116 @@
     <!-- main screen start -->
     <main class="main">
 
-        <section class="reviews bg-blue-light">
-            <div class="container">
-                <div class="work-title">
-                    <div class="h3">
-                        Отзывы
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4">                       
-                      <div style="width:560px;height:800px;overflow:hidden;position:relative;"><iframe style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box" src="https://yandex.ru/maps-reviews-widget/1238485123?comments"></iframe><a href="https://yandex.by/maps/org/stomatologiya_dentopolis/1238485123/" target="_blank" style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">Стоматология Дентополис на карте Минска — Яндекс Карты</a></div>
-                    </div>
-                    <div class="col-lg-4">
-                        google
-                        <div class="ti-widget ti-goog"></div>                        
-                    </div>
-                    <div class="col-lg-4">
-                        <div class="swiper-slide reviews-slide">
-                            <div class="reviews-head">
-                              <div class="h4">
-                                Юля Тихончук                   
-                              </div>
-                              <div class="reviews-head-rating five">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                  <path d="M12.4723 18.499C12.181 18.3456 11.8329 18.3454 11.5415 18.4985L7.62018 20.5581C6.88653 20.9435 6.02942 20.3205 6.16959 19.5037L6.91793 15.143C6.97368 14.8182 6.86576 14.4867 6.62942 14.2569L3.45621 11.1718C2.86133 10.5934 3.18892 9.58394 4.01007 9.46511L8.38952 8.83132C8.71535 8.78417 8.9971 8.57966 9.14289 8.28448L11.1035 4.3151C11.4704 3.57226 12.5297 3.57222 12.8966 4.31504L14.8571 8.28353C15.0029 8.57868 15.2846 8.78317 15.6104 8.83032L19.9904 9.46418C20.8115 9.583 21.1392 10.5923 20.5445 11.1707L17.3704 14.2579C17.1342 14.4877 17.0263 14.8191 17.0821 15.1439L17.8299 19.5013C17.9702 20.3185 17.1122 20.9416 16.3785 20.5553L12.4723 18.499Z" stroke="#BD5B9E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                  <path d="M12.4723 18.499C12.181 18.3456 11.8329 18.3454 11.5415 18.4985L7.62018 20.5581C6.88653 20.9435 6.02942 20.3205 6.16959 19.5037L6.91793 15.143C6.97368 14.8182 6.86576 14.4867 6.62942 14.2569L3.45621 11.1718C2.86133 10.5934 3.18892 9.58394 4.01007 9.46511L8.38952 8.83132C8.71535 8.78417 8.9971 8.57966 9.14289 8.28448L11.1035 4.3151C11.4704 3.57226 12.5297 3.57222 12.8966 4.31504L14.8571 8.28353C15.0029 8.57868 15.2846 8.78317 15.6104 8.83032L19.9904 9.46418C20.8115 9.583 21.1392 10.5923 20.5445 11.1707L17.3704 14.2579C17.1342 14.4877 17.0263 14.8191 17.0821 15.1439L17.8299 19.5013C17.9702 20.3185 17.1122 20.9416 16.3785 20.5553L12.4723 18.499Z" stroke="#BD5B9E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                  <path d="M12.4723 18.499C12.181 18.3456 11.8329 18.3454 11.5415 18.4985L7.62018 20.5581C6.88653 20.9435 6.02942 20.3205 6.16959 19.5037L6.91793 15.143C6.97368 14.8182 6.86576 14.4867 6.62942 14.2569L3.45621 11.1718C2.86133 10.5934 3.18892 9.58394 4.01007 9.46511L8.38952 8.83132C8.71535 8.78417 8.9971 8.57966 9.14289 8.28448L11.1035 4.3151C11.4704 3.57226 12.5297 3.57222 12.8966 4.31504L14.8571 8.28353C15.0029 8.57868 15.2846 8.78317 15.6104 8.83032L19.9904 9.46418C20.8115 9.583 21.1392 10.5923 20.5445 11.1707L17.3704 14.2579C17.1342 14.4877 17.0263 14.8191 17.0821 15.1439L17.8299 19.5013C17.9702 20.3185 17.1122 20.9416 16.3785 20.5553L12.4723 18.499Z" stroke="#BD5B9E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                  <path d="M12.4723 18.499C12.181 18.3456 11.8329 18.3454 11.5415 18.4985L7.62018 20.5581C6.88653 20.9435 6.02942 20.3205 6.16959 19.5037L6.91793 15.143C6.97368 14.8182 6.86576 14.4867 6.62942 14.2569L3.45621 11.1718C2.86133 10.5934 3.18892 9.58394 4.01007 9.46511L8.38952 8.83132C8.71535 8.78417 8.9971 8.57966 9.14289 8.28448L11.1035 4.3151C11.4704 3.57226 12.5297 3.57222 12.8966 4.31504L14.8571 8.28353C15.0029 8.57868 15.2846 8.78317 15.6104 8.83032L19.9904 9.46418C20.8115 9.583 21.1392 10.5923 20.5445 11.1707L17.3704 14.2579C17.1342 14.4877 17.0263 14.8191 17.0821 15.1439L17.8299 19.5013C17.9702 20.3185 17.1122 20.9416 16.3785 20.5553L12.4723 18.499Z" stroke="#BD5B9E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
-                                  <path d="M12.4723 18.499C12.181 18.3456 11.8329 18.3454 11.5415 18.4985L7.62018 20.5581C6.88653 20.9435 6.02942 20.3205 6.16959 19.5037L6.91793 15.143C6.97368 14.8182 6.86576 14.4867 6.62942 14.2569L3.45621 11.1718C2.86133 10.5934 3.18892 9.58394 4.01007 9.46511L8.38952 8.83132C8.71535 8.78417 8.9971 8.57966 9.14289 8.28448L11.1035 4.3151C11.4704 3.57226 12.5297 3.57222 12.8966 4.31504L14.8571 8.28353C15.0029 8.57868 15.2846 8.78317 15.6104 8.83032L19.9904 9.46418C20.8115 9.583 21.1392 10.5923 20.5445 11.1707L17.3704 14.2579C17.1342 14.4877 17.0263 14.8191 17.0821 15.1439L17.8299 19.5013C17.9702 20.3185 17.1122 20.9416 16.3785 20.5553L12.4723 18.499Z" stroke="#BD5B9E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                </svg>                      
-                              </div>
-                            </div>
-                            <div class="reviews-main">
-                              <p>
-                                Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
-                                приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
-                                вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
-                                Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
-                                Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
-                                приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
-                                вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
-                                Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"! 
-                              </p>                  
-                            </div>
+        <section class="section reviews bg-blue-light">
+          <div class="container">
+            <div class="section-title">              
+              Отзывы              
+            </div>
+            <div class="row">
+              <div class="col-lg-4">                       
+                <div style="width:512px;height:942px;overflow:hidden;position:relative;"><iframe style="width:100%;height:100%;border:1px solid #e6e6e6;border-radius:8px;box-sizing:border-box" src="https://yandex.ru/maps-reviews-widget/1238485123?comments"></iframe><a href="https://yandex.by/maps/org/stomatologiya_dentopolis/1238485123/" target="_blank" style="box-sizing:border-box;text-decoration:none;color:#b3b3b3;font-size:10px;font-family:YS Text,sans-serif;padding:0 20px;position:absolute;bottom:8px;width:100%;text-align:center;left:0;overflow:hidden;text-overflow:ellipsis;display:block;max-height:14px;white-space:nowrap;padding:0 16px;box-sizing:border-box">Стоматология Дентополис на карте Минска — Яндекс Карты</a></div>
+              </div>
+              <div class="col-lg-4">                
+                <div class="ti-widget ti-goog">
+                  google отзывы
+                </div>                        
+              </div>
+              <div class="col-lg-4">
+                <div class="swiper vertical-slider reviews-slider__vertical">
+                  <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                      <div class="reviews-card">
+                        <div class="reviews-card-head">
+                          <div class="reviews-card-name">
+                            Юля Тихончук                   
                           </div>
+                          <div class="reviews-card-rating rating-5">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                              <path d="M12.4723 18.499C12.181 18.3456 11.8329 18.3454 11.5415 18.4985L7.62018 20.5581C6.88653 20.9435 6.02942 20.3205 6.16959 19.5037L6.91793 15.143C6.97368 14.8182 6.86576 14.4867 6.62942 14.2569L3.45621 11.1718C2.86133 10.5934 3.18892 9.58394 4.01007 9.46511L8.38952 8.83132C8.71535 8.78417 8.9971 8.57966 9.14289 8.28448L11.1035 4.3151C11.4704 3.57226 12.5297 3.57222 12.8966 4.31504L14.8571 8.28353C15.0029 8.57868 15.2846 8.78317 15.6104 8.83032L19.9904 9.46418C20.8115 9.583 21.1392 10.5923 20.5445 11.1707L17.3704 14.2579C17.1342 14.4877 17.0263 14.8191 17.0821 15.1439L17.8299 19.5013C17.9702 20.3185 17.1122 20.9416 16.3785 20.5553L12.4723 18.499Z" stroke="#BD5B9E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                              <path d="M12.4723 18.499C12.181 18.3456 11.8329 18.3454 11.5415 18.4985L7.62018 20.5581C6.88653 20.9435 6.02942 20.3205 6.16959 19.5037L6.91793 15.143C6.97368 14.8182 6.86576 14.4867 6.62942 14.2569L3.45621 11.1718C2.86133 10.5934 3.18892 9.58394 4.01007 9.46511L8.38952 8.83132C8.71535 8.78417 8.9971 8.57966 9.14289 8.28448L11.1035 4.3151C11.4704 3.57226 12.5297 3.57222 12.8966 4.31504L14.8571 8.28353C15.0029 8.57868 15.2846 8.78317 15.6104 8.83032L19.9904 9.46418C20.8115 9.583 21.1392 10.5923 20.5445 11.1707L17.3704 14.2579C17.1342 14.4877 17.0263 14.8191 17.0821 15.1439L17.8299 19.5013C17.9702 20.3185 17.1122 20.9416 16.3785 20.5553L12.4723 18.499Z" stroke="#BD5B9E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                              <path d="M12.4723 18.499C12.181 18.3456 11.8329 18.3454 11.5415 18.4985L7.62018 20.5581C6.88653 20.9435 6.02942 20.3205 6.16959 19.5037L6.91793 15.143C6.97368 14.8182 6.86576 14.4867 6.62942 14.2569L3.45621 11.1718C2.86133 10.5934 3.18892 9.58394 4.01007 9.46511L8.38952 8.83132C8.71535 8.78417 8.9971 8.57966 9.14289 8.28448L11.1035 4.3151C11.4704 3.57226 12.5297 3.57222 12.8966 4.31504L14.8571 8.28353C15.0029 8.57868 15.2846 8.78317 15.6104 8.83032L19.9904 9.46418C20.8115 9.583 21.1392 10.5923 20.5445 11.1707L17.3704 14.2579C17.1342 14.4877 17.0263 14.8191 17.0821 15.1439L17.8299 19.5013C17.9702 20.3185 17.1122 20.9416 16.3785 20.5553L12.4723 18.499Z" stroke="#BD5B9E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                              <path d="M12.4723 18.499C12.181 18.3456 11.8329 18.3454 11.5415 18.4985L7.62018 20.5581C6.88653 20.9435 6.02942 20.3205 6.16959 19.5037L6.91793 15.143C6.97368 14.8182 6.86576 14.4867 6.62942 14.2569L3.45621 11.1718C2.86133 10.5934 3.18892 9.58394 4.01007 9.46511L8.38952 8.83132C8.71535 8.78417 8.9971 8.57966 9.14289 8.28448L11.1035 4.3151C11.4704 3.57226 12.5297 3.57222 12.8966 4.31504L14.8571 8.28353C15.0029 8.57868 15.2846 8.78317 15.6104 8.83032L19.9904 9.46418C20.8115 9.583 21.1392 10.5923 20.5445 11.1707L17.3704 14.2579C17.1342 14.4877 17.0263 14.8191 17.0821 15.1439L17.8299 19.5013C17.9702 20.3185 17.1122 20.9416 16.3785 20.5553L12.4723 18.499Z" stroke="#BD5B9E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none">
+                              <path d="M12.4723 18.499C12.181 18.3456 11.8329 18.3454 11.5415 18.4985L7.62018 20.5581C6.88653 20.9435 6.02942 20.3205 6.16959 19.5037L6.91793 15.143C6.97368 14.8182 6.86576 14.4867 6.62942 14.2569L3.45621 11.1718C2.86133 10.5934 3.18892 9.58394 4.01007 9.46511L8.38952 8.83132C8.71535 8.78417 8.9971 8.57966 9.14289 8.28448L11.1035 4.3151C11.4704 3.57226 12.5297 3.57222 12.8966 4.31504L14.8571 8.28353C15.0029 8.57868 15.2846 8.78317 15.6104 8.83032L19.9904 9.46418C20.8115 9.583 21.1392 10.5923 20.5445 11.1707L17.3704 14.2579C17.1342 14.4877 17.0263 14.8191 17.0821 15.1439L17.8299 19.5013C17.9702 20.3185 17.1122 20.9416 16.3785 20.5553L12.4723 18.499Z" stroke="#BD5B9E" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                            </svg>                      
+                          </div>
+                        </div>
+                        <div class="reviews-card-main">
+                          <p>
+                            Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
+                            приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
+                            вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
+                            Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"!
+                            Отличная стоматология, где чувствуешь себя комфортно и спокойно. Нравится все: уютная обстановка,
+                            приветливые и отзывчивые администраторы,классные врачи, и то что можно получить ответы на все интересующие
+                            вопросы. Здесь мне лечили зубы,установили импланты. Отдельное спасибо Николаене Александру Николаевичу и
+                            Крату Максиму Игоревичу за профессионализм и доброе отношение)) С удовольствием рекомендую "Дентополис"! 
+                          </p>                  
+                        </div>
+                      </div> 
                     </div>
-                </div>
-            </div>    
+                    <div class="swiper-slide">
+                      <div class="reviews-card">
+                        <img src="./images/review-1.jpg" alt="review">
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="reviews-card">
+                        <img src="./images/review-2.jpg" alt="review">
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="reviews-card">
+                        <img src="./images/review-1.jpg" alt="review">
+                      </div>
+                    </div>
+                    <div class="swiper-slide">
+                      <div class="reviews-card">
+                        <img src="./images/review-2.jpg" alt="review">
+                      </div>
+                    </div>
+                  </div>
+                  
+                  <!-- <div class="slider-arrows">
+                    <div class="slider-prev">           
+                      <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
+                        <path d="M55 12H4" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M10 18L4 12L10 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>              
+                    </div>
+                    <div class="slider-next">
+                      <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
+                        <path d="M1 12H52" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M46 18L52 12L46 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>               
+                    </div>          
+                  </div>    -->
+
+                  <div class="vertical-arrows">
+                    <div class="vertical-arrows-prev">           
+                      <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
+                        <path d="M55 12H4" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M10 18L4 12L10 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>              
+                    </div>
+                    <div class="vertical-arrows-next">
+                      <svg width="56" height="24" viewBox="0 0 56 24" fill="none">
+                        <path d="M1 12H52" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M46 18L52 12L46 6" stroke="#222340" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                      </svg>               
+                    </div>          
+                  </div>                  
+                </div> 
+              </div>
+            </div>
+          </div>    
         </section>
         <section class="reviews-send feedback">
             <div class="container">
