--- a/public/acticleDetail.html
+++ b/public/acticleDetail.html
@@ -479,7 +479,7 @@
           </div>
         </div>
       </section>
-      <section class="section service-content bg-blue-light">
+      <section class="section section-article bg-blue-light">
         <div class="container">               
           <div class="service-wrapper">
             <div class="service-main-wrapper">
