--- a/public/articles.html
+++ b/public/articles.html
@@ -443,9 +443,9 @@
 
     <!-- main screen start -->
     <main class="main">      
-      <section class="section articles bg-blue-light">            
+      <section class="section section-all-articles bg-blue-light">            
         <div class="container">
-          <div class="h3">
+          <div class="section-title">
             Статьи
           </div>                
           <div class="articles-wrapper">
