--- a/public/services.html
+++ b/public/services.html
@@ -443,7 +443,7 @@
 
     <!-- main screen start -->
     <main class="main">     
-      <section class="section services-page bg-blue-light">            
+      <section class="section section-services bg-blue-light">            
         <div class="container">
           <div class="section-title">
             Все Услуги
