--- a/src/about.html
+++ b/src/about.html
@@ -443,7 +443,7 @@
 
     <!-- main screen start -->
     <main class="main">
-      <section class="section-prepage about">
+      <section class="section-prepage section-about">
         <img src="./images/about-bg.jpg" alt="slider" class="prepage-bg" loading="lazy">
         <div class="container">
           <div class="prepage-content">
@@ -692,7 +692,7 @@
         </div>
       </section>
 
-      <section class="section services bg-blue">
+      <section class="section section-services bg-blue">
         <div class="container">
           <div class="section-title">
             Основные услуги
@@ -1313,7 +1313,7 @@
 
 
       <!-- отзывы -->
-      <section class="section reviews bg-blue-light">
+      <section class="section section-reviews bg-blue-light">
         <div class="container">
           <div class="section-title">           
             Отзывы                    
@@ -1491,7 +1491,7 @@
         </div>
       </section>
 
-      <section class="feedback">
+      <section class="section-feedback feedback">
         <div class="container">
           <div class="feedback-wrapper">            
             <form class="feedback-form" id="appointment">
