--- a/src/contacts.html
+++ b/src/contacts.html
@@ -490,7 +490,7 @@
           </div>
         </div>
       </section>
-      <section class="section contacts bg-blue-light">
+      <section class="section section-contacts bg-blue-light">
         <div class="container">               
           <div class="contacts-wrapper">
             <div class="contacts-main-wrapper">                       
@@ -753,7 +753,7 @@
           </div>
         </div>
       </section>
-      <section class="section requisites bg-blue">
+      <section class="section section-requisites bg-blue">
         <div class="container">
           <div class="requisites-wrapper">
             <div class="requisites-text">
