--- a/src/doctors.html
+++ b/src/doctors.html
@@ -788,7 +788,7 @@
       </section>
 
       <!-- отзывы -->
-      <section class="section reviews bg-blue">
+      <section class="section section-reviews bg-blue">
         <div class="container">
           <div class="section-title">           
             Отзывы                    
