--- a/src/vacancies.html
+++ b/src/vacancies.html
@@ -468,7 +468,7 @@
           </a>            
         </div>
       </section>
-      <section class="section vacancies-list bg-blue-light">
+      <section class="section section-vacancies vacancies-list bg-blue-light">
         <div class="container">
           <div class="vacancies-list-title">
             Стоматологическая клиника «Дентополис» открывает набор по следующим вакансиям:
@@ -507,7 +507,7 @@
           </div>          
         </div>
       </section>
-      <section class="section vacancies-benefits bg-blue">
+      <section class="section section-vacancies-benefits bg-blue">
         <div class="container">
           <div class="section-title vacancies-benefits-title">
             Что мы предлагаем
@@ -582,7 +582,7 @@
           </div>
         </div>
       </section>
-      <section class="section vacancies-contacts bg-blue-light">
+      <section class="section section-vacancies-contacts bg-blue-light">
         <div class="container">
           <div class="vacancies-contacts-wrapper">
             <div class="contacts-map-wrapper">
