--- a/src/wisdomTeeth.html
+++ b/src/wisdomTeeth.html
@@ -476,7 +476,7 @@
           </div>
         </div>
       </section>
-      <section class="section service-content bg-blue-light">
+      <section class="section section-article bg-blue-light">
         <div class="container">
           <div class="service-wrapper">
             <div class="service-main-wrapper">
@@ -591,7 +591,7 @@
                   </a>
                 </div>
               </div>
-              <section class="doctors doctors__single bg-blue-light">                           
+              <section class="section-doctors doctors__single bg-blue-light">                           
                 <div class="block-title">
                   Наши Хирурги
                 </div>
@@ -662,7 +662,7 @@
                   </div>
                 </div>
               </section>
-              <section class="examples bg-blue-light horizontal no-padding">                            
+              <section class="section-examples bg-blue-light horizontal">                            
                 <div class="block-title">
                   Наши Работы
                 </div>                
